tests/typechecker/should_pass/recursive_rect.csp
datatype Z = A.{0,1}
datatype Y = X.{A.0}
datatype K = J.{X.A.0, X.A.1}
