tests/typechecker/should_fail/subtype_arg_length.csp
datatype X = Y.Int

subtype Z = Y.{0}.{1}
